Fixed slideshow arrows z-index

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@
   .prev, .next {
 	position: absolute;
 	top: 50%;
-	z-index: 1;
+	z-index: 0;
 	font-size: 24px;
 	cursor: pointer;
 	background-color: rgba(0,0,0,0.6);
